# cocos-native

./: .gitignore  CMakeLists.txt  GameApp.cpp  GameApp.h  GameManager.cpp  GameManager.h  ProjectRoot.h.in  README.md  main.cpp
cmake/: thirdparty.cmake
core/: core_files.cmake
core/asset/: Asset.cpp  Asset.h  DataBase.cpp  DataBase.h
core/jobsystem/: JobSystem.h
core/math/: Random.cpp  Random.h  Sfmt.cpp  Sfmt.h
core/registry/: Registry.cpp  Registry.h
core/singleton/: Singleton.h
core/util/: Hash.h  TypeInfo.h  Uuid.cpp  Uuid.h
game/: game_files.cmake
game/common/: IGame.h
game/pipeline/: NativePipelineSample.cpp  NativePipelineSample.h
render/: render_files.cmake
render/component/: ComponentData.h  Components.cpp  Registry.h
render/imgui/: UIContextData.cpp  UIContextData.h  UIDataType.h  UIManager.cpp  UIManager.h  UIRender.cpp  UIRenderSystem.cpp  UIRenderSystem.h  UIRenderer.h
render/scene/: RenderQueue.cpp  RenderQueue.h  RenderScene.cpp  RenderScene.h
render/world/: World.cpp  World.h
